--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<title>stViedo</title>
 
-	<link rel="stylesheet" href="assets/css/stvideo.css">
+	<link rel="stylesheet" href="dist/css/stvideo.css">
 
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
@@ -30,7 +30,7 @@
 		<a class="github-button" href="https://github.com/tstabla" data-style="mega" aria-label="Follow @tstabla on GitHub">Follow @tstabla</a>
 	</footer>
 
-	<script src="assets/js/stvideo.js"></script>
+	<script src="dist/js/stvideo.js"></script>
 	<script>
 		var video = new stVideo('#player');
 
